# instrument-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMANDS.md  README.md  SCENARIO.md  TODO.md  pyproject.toml
.claude/: mcp.json
src/instrument_mcp/: __init__.py  __main__.py  instruments.py  server.py  tools.py
src/instrument_mcp/commands/: __init__.py  cmw.yaml  generic.yaml  keysight_ps.yaml  mxa.yaml
