[project]
name = "instrument-mcp"
version = "0.1.0"
description = "MCP Server for MXA/CMW/PPK2 instrument control"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pyvisa",
    "pyserial",
    "pyyaml",
]

[project.scripts]
instrument-mcp = "instrument_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
